--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
-    "share": "npm-run-all --parallel open:src localtunnel"
+    "share": "npm-run-all --parallel open:src localtunnel",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
   },
   "author": "Cory House",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.42",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
