--- a/package.json
+++ b/package.json
@@ -17,16 +17,14 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
-    "whatwg-fetch": "1.0.0"
+    "@babel/core": "^7.0.0-beta.42"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "babel-cli": "^6.16.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-latest": "6.16.0",
-    "babel-register": "6.16.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "3.5.0",
     "chalk": "1.1.3",
     "cheerio": "0.22.0",
@@ -50,6 +48,7 @@
     "numeral": "1.5.3",
     "open": "0.0.5",
     "rimraf": "2.5.4",
+    "shelljs": "^0.8.1",
     "style-loader": "^0.13.1",
     "webpack": "^4.2.0",
     "webpack-dev-middleware": "^3.0.1",
