--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "test": "mocha --reporter progress buildScripts/testsetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node buildScripts/generateMockData",
-    "prestart-mockapi":"npm run generate-mock-data",
-    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "build": "babel-node buildScripts/build.js",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "postbuild": "babel-node buildScripts/srcServer.js --prod"
   },
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.42"
+    "@babel/core": "^7.0.0-beta.42",
+    "uglifyjs-webpack-plugin": "^1.2.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -39,8 +44,8 @@
     "eslint-plugin-import": "2.0.1",
     "eslint-watch": "2.1.14",
     "express": "4.14.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "html-webpack-plugin": "2.22.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.1.0",
     "jsdom": "9.8.0",
     "json-schema-faker": "0.3.6",
     "json-server": "0.8.22",
