--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "clean-dist": "rimraf ./dist && mkdir dist",
     "build": "babel-node buildScripts/build.js",
     "prebuild": "npm-run-all clean-dist test lint",
-    "postbuild": "babel-node buildScripts/srcServer.js --prod"
+    "postbuild": "babel-node buildScripts/srcServer.js --prod",
+    "deploy": "surge ./dist"
   },
   "author": "Cory House",
   "license": "MIT",
